--- a/app/components/ProductCard.module.scss
+++ b/app/components/ProductCard.module.scss
@@ -3,7 +3,6 @@
   width: 240px;
   background: transparent;
   overflow: hidden;
-  //scroll-snap-align: start;
 
     img{
       border-radius: 2rem;
@@ -15,9 +14,6 @@
       max-height: 300px;
     }
 
-  img:hover{
-    scale: 1.55;
-  }
 
   h3{
     padding-top: 1rem;
@@ -33,12 +29,17 @@
     margin: 1.5rem 0 0.5rem 0.1rem ;
 
     .pickerBtn{
-      border: 2px solid #fff;        // Kalın beyaz border
-      outline: 0.5px solid #222;
+      border: 2px solid transparent;
+      outline: 0.5px solid transparent;
       border-radius: 50%;
       width: 20px;
       height: 20px;
       margin-right: 8px;
+    }
+
+    .btnActive{
+      border: 2px solid #fff;
+      outline: 0.5px solid #222;
     }
   }
 
