--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,5 +11,11 @@
 }
 
 main{
-  padding: 1rem 3rem;
+  padding: 3rem;
+
+  header{
+    font-size: 45px;
+    text-align: center;
+    margin-bottom: 3rem;
+  }
 }
