--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,10 +11,28 @@
 }
 
 main{
-  padding: 3rem;
+  padding: 1rem;
+
+  @media (min-width: 480px) {
+    padding: 2rem;
+  }
+
+  @media (min-width: 768px) {
+    padding: 3rem;
+  }
 
   header{
-    font-size: 45px;
+    font-size: 25px;
+
+    @media (min-width: 480px) {
+      font-size: 35px;
+    }
+
+    @media (min-width: 768px) {
+      font-size: 45px;
+    }
+
+
     text-align: center;
     margin-bottom: 3rem;
   }
