--- a/app/components/ProductList.module.scss
+++ b/app/components/ProductList.module.scss
@@ -13,6 +13,7 @@
   padding: 1rem 0;
   scroll-snap-type: x mandatory;
   margin: 1rem 4rem;
+  -webkit-overflow-scrolling: auto;
 
   scrollbar-color: rgba(0,0,0,0.2) transparent;
 }
