--- a/app/components/ProductFilter.module.scss
+++ b/app/components/ProductFilter.module.scss
@@ -1,6 +1,9 @@
 .container {
   width: 100%;
   padding: 0 1rem;
+  font-family: var(--font-avenir), sans-serif;
+  font-weight: 500;
+  font-size: 14px;
 }
 
 .filterBox {
