--- a/app/components/ProductList.module.scss
+++ b/app/components/ProductList.module.scss
@@ -53,4 +53,7 @@
 
 .empty {
   text-align: center;
+  font-size: 1.5rem;
+  font-family: var(--font-montserrat), sans-serif;
+  font-weight: 500;
 }
