--- a/app/components/ProductFilter.module.scss
+++ b/app/components/ProductFilter.module.scss
@@ -110,6 +110,7 @@
   border-radius: 6px;
   background: #fafafa;
   transition: border-color 0.2s;
+  cursor: pointer;
 }
 .group input:focus,
 .group select:focus {
